Update to java-gi 0.10 and JDK 22, compile resources during build