@@ -17,22 +17,29 @@ idea {
 }
 
 dependencies {
-    implementation 'io.github.jwharm.javagi:adw:0.9.1'
-    implementation 'io.github.jwharm.cairobindings:cairo:1.18.2'
+    implementation 'io.github.jwharm.javagi:adw:0.10.0'
+    implementation 'io.github.jwharm.cairobindings:cairo:1.18.3'
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(22)
     }
 }
 
-tasks.named('compileJava', JavaCompile) {
-    options.compilerArgs += '--enable-preview'
+tasks.register('glibCompileResources') {
+    exec {
+        workingDir 'src/main/resources'
+        commandLine 'C:/dev/msys64/mingw64/bin/glib-compile-resources',
+                    'game.gresource.xml'
+    }
+}
+
+tasks.named('compileJava') {
+    dependsOn glibCompileResources
 }
 
 tasks.named('run', JavaExec) {
-    jvmArgs += '--enable-preview'
     jvmArgs += '--enable-native-access=ALL-UNNAMED'
     jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
 }
